manifest.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-premiere
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.premiere.sh
      secretName: ingress-premiere-tls
  rules:
    - host: api.premiere.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: premiere-api-port
                port:
                  number: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: db
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      name: db
  replicas: 1
  template:
      metadata:
        labels:
          name: db
      spec:
        containers:
          - name: db
            image: postgres
            ports:
              - containerPort: 5432
            volumeMounts:
              - mountPath: /var/lib/postgresql/data
                name: db-storage
        volumes:
          - name: db-storage
            persistentVolumeClaim:
              claimName: db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: premiere-api-port
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    name: premiere-api
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: premiere-api
spec:
  selector:
    matchLabels:
      name: premiere-api
  replicas: 1
  template:
      metadata:
        labels:
          name: premiere-api
      spec:
        containers:
          - name: premiere-api
            image: piotrostr/premiere:latest
            ports:
              - containerPort: 5000
        imagePullSecrets:
          - name: regcred
        restartPolicy: Always
